--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -9,7 +9,7 @@
  */
 {
   "current": {
-    "logo": "shopify://shop_images/7_dot_Logo_1.png",
+    "logo": "shopify://shop_images/logo.png",
     "logo_width": 130,
     "type_header_font": "archivo_n4",
     "heading_scale": 100,
