--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -17,9 +17,9 @@
     "body_scale": 100,
     "page_width": 1240,
     "spacing_sections": 0,
-    "spacing_grid_horizontal": 16,
-    "spacing_grid_vertical": 24,
-    "animations_reveal_on_scroll": true,
+    "spacing_grid_horizontal": 20,
+    "spacing_grid_vertical": 20,
+    "animations_reveal_on_scroll": false,
     "animations_hover_elements": "none",
     "buttons_border_thickness": 1,
     "buttons_border_opacity": 100,
