--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,7 +11,7 @@
   "current": {
     "logo": "shopify://shop_images/logo.png",
     "logo_width": 130,
-    "type_header_font": "archivo_n4",
+    "type_header_font": "montserrat_n4",
     "heading_scale": 100,
     "type_body_font": "archivo_n4",
     "body_scale": 100,
