--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,9 +11,9 @@
   "current": {
     "logo": "shopify://shop_images/logo.png",
     "logo_width": 130,
-    "type_header_font": "archivo_narrow_n4",
+    "type_header_font": "archivo_n4",
     "heading_scale": 100,
-    "type_body_font": "archivo_narrow_n4",
+    "type_body_font": "archivo_n4",
     "body_scale": 100,
     "page_width": 1240,
     "spacing_sections": 0,
@@ -122,7 +122,7 @@
     "predictive_search_show_vendor": false,
     "predictive_search_show_price": false,
     "currency_code_enabled": false,
-    "cart_type": "notification",
+    "cart_type": "drawer",
     "show_vendor": false,
     "show_cart_note": false,
     "cart_drawer_collection": "",
